<resources>
    <string name="app_name">UrnaEletrônica</string>
    <string name="btn_candidate_legislative">Candidatos</string>
    <string name="btn_partys">Partidos</string>
    <string name="btn_vote">Votar</string>
    <string name="party_name_hint">Nome do Partido</string>
    <string name="party_initial_hint">Sigla</string>
    <string name="party_number_hint">Numero</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_update">Atulizar</string>
    <string name="btn_office">Cargos</string>
    <string name="cargo_hint">Cargo</string>
    <string name="cargo_numberLimt_hint">Numero maximo</string>
    <string name="btn_voter">Eleitores</string>
    <string name="switch_executive">Executivo</string>
    <string name="btn_plates">Chapas Executivas</string>
    <string name="btn_zone">Zonas</string>
    <string name="btn_section">Seções</string>
    <string name="already_exist_party_signals">Ja existe um partido com essa sigla</string>
    <string name="zone_name_edittext">Nome da zona</string>
    <string name="zone_number_edittext">Número da zona</string>
    <string name="forms_invalid">Preencha devidamente os itens</string>
    <string name="exist_another_zone">Ja existe outra zona com esse número</string>
    <string name="section_number_edittext">Número da Seção</string>
    <string name="not_exist_zone_with_number">Não existe Zona com esses números</string>
    <string name="voter_name_hint">Nome do Eleitor</string>
    <string name="empty_sections">Não existe nenhuma Seção</string>
    <string name="voter_tittle_hint">Numero do titulo</string>
    <string name="number_candidate_hint">Resto do Número</string>
    <string name="empty_prefix">00</string>
    <string name="candidate_already_exist">Este eleitor ja é um candidato</string>
    <string name="number_isnt_same_length">Preencha a quantidade de caracters necessária</string>
    <string name="office">Cargo</string>
    <string name="main_candidate">Principal</string>
    <string name="vice_candidate">Vice</string>
    <string name="plate_name">Nome da chapa</string>
    <string name="autenticate">Autenticar</string>
    <string name="zone_and_section">Zona e sessao</string>
    <string name="drop_bank">Resetar Eleição</string>
    <string name="gerate_reports">Gerar Relatorio</string>
    <string name="incorrect_session">Eleitor nao pertence a essa sessao</string>
    <string name="incorrect_tittle">Não existe nenhum eleitor com esse titulo</string>
    <string name="voter_has_voted">O eleitor ja votou</string>
    <string name="your_vote_to">SEU VOTO PARA</string>
    <string name="number_vote">Numero</string>
    <string name="name">Nome</string>
    <string name="party_name">Partido</string>
    <string name="numeral_1">1</string>
    <string name="numeral_2">2</string>
    <string name="numeral_3">3</string>
    <string name="numeral_6">6</string>
    <string name="numeral_7">7</string>
    <string name="numeral_9">9</string>
    <string name="numeral_0">0</string>
    <string name="numeral_8">8</string>
    <string name="numeral_5">5</string>
    <string name="numeral_4">4</string>
    <string name="confirm">Confirmar</string>
    <string name="corrects">CORRIGE</string>
    <string name="blank">branco</string>
    <string name="non_existe_party">Nao existe partido com esse numero</string>
    <string name="gerate_reports_this">Gerar relatório desta Urna</string>
</resources>