<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfficeAdm">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_office"
            android:layout_width="380dp"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/edit_office_name"
                style="@style/EditTextPartyForm"
                android:layout_marginTop="20dp"
                android:hint="@string/cargo_hint"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_office_initials"
                style="@style/EditTextPartyForm"
                android:hint="@string/cargo_numberLimt_hint"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="@+id/edit_office_name"
                app:layout_constraintStart_toStartOf="@+id/edit_office_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_office_name" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/btn_office_save"
                    style="@style/ButtonsPartyForm"

                    android:layout_marginRight="5dp"
                    android:text="@string/btn_save" />

                <Button
                    android:id="@+id/btn_office_update"
                    style="@style/ButtonsPartyForm"

                    android:layout_marginLeft="5dp"
                    android:text="@string/btn_update" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>