<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PartysAdmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_partys"
            android:layout_width="380dp"
            android:layout_height="match_parent"
            tools:itemCount="3"
            tools:listitem="@layout/photo_three_text_layout">


        </androidx.recyclerview.widget.RecyclerView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_party_name"
                style="@style/EditTextPartyForm"
                android:layout_marginTop="20dp"
                android:hint="@string/party_name_hint"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_party_initials"
                style="@style/EditTextPartyForm"
                android:hint="@string/party_initial_hint"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/edit_party_name"
                app:layout_constraintStart_toStartOf="@+id/edit_party_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_party_name" />

            <EditText
                android:id="@+id/edit_party_number"
                style="@style/EditTextPartyForm"
                android:hint="@string/party_number_hint"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/edit_party_initials"
                app:layout_constraintStart_toStartOf="@+id/edit_party_initials"
                app:layout_constraintTop_toBottomOf="@+id/edit_party_initials" />

            <ImageView
                android:id="@+id/img_party_photo"

                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_party_save"
                app:layout_constraintEnd_toEndOf="@+id/edit_party_number"
                app:layout_constraintStart_toStartOf="@+id/edit_party_number"
                app:layout_constraintTop_toBottomOf="@+id/edit_party_number"
                app:srcCompat="@drawable/ic_add_photo"
                tools:srcCompat="@drawable/ic_add_photo" />


            <Button
                android:id="@+id/btn_party_save"
                style="@style/ButtonsPartyForm"

                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/btn_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>